adjust Files.writeString→write for jdk8u